--- a/src/pages/Homepage/Home.css
+++ b/src/pages/Homepage/Home.css
@@ -6,7 +6,6 @@
 .notes-main-container {
   height: calc(100vh - 85px);
   overflow-y: scroll;
-  margin-top: 2rem;
 }
 
 .notes-container-toggle-open {
@@ -19,6 +18,7 @@
   gap: 1.5rem;
   flex-wrap: wrap;
   justify-content: center;
+  margin-top: 2rem;
 }
 
 .btn-container {
@@ -30,6 +30,10 @@
   background-color: var(--notes-color);
   font-size: 1.5rem;
   font-weight: 600;
+}
+
+.app {
+  max-height: 100%;
 }
 @media only screen and (max-width: 900px) {
   .notes-container-toggle-open {
